# ambipi

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile.cross  JMGO-BT-WAKE.md  Makefile  README.md  ambipi.cpp  ambipi.h  ambipi.pro  ambipi.service  atvremote.cpp  atvremote.h  centronic.cpp  centronic.h  config.json  framebuffer.cpp  framebuffer.h  main.cpp  restserver.cpp  restserver.h  vertex.cpp  vertex.h
esp32remote/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
esp32remote/main/: CMakeLists.txt  main.c
gamewall/: CMakeLists.txt  main.cpp
gamewall/public/: index.html  shelves.json  swagger.json
html/: ambipi.css  ambipi.js  index.html
packaging/: ambipi.service  build-deb.sh  conffiles  postinst  preinst  prerm
